--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "father build",
     "build:watch": "father dev",
+    "commit": "git add . && git-cz",
     "deploy": "npm run docs:build && npm run docs:deploy",
     "dev": "dumi dev",
     "docs:build": "dumi build",
@@ -27,11 +28,6 @@
     "prepare": "husky install && dumi setup",
     "prepublishOnly": "father doctor && npm run build",
     "start": "npm run dev"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
   },
   "lint-staged": {
     "*.{md,json}": [
@@ -50,14 +46,21 @@
       "prettier --parser=typescript --write"
     ]
   },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
+  },
   "dependencies": {
     "axios": "^1.3.1",
+    "commitizen": "^4.3.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/runtime": "^7.20.13",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cz-commitlint": "^17.4.2",
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
     "@umijs/lint": "^4.0.0",
