--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "@dxsixpc/utils",
   "version": "0.0.8",
   "description": "工具库",
+  "homepage": "https://dxsixpc.github.io/utils",
   "repository": {
     "type": "git",
     "url": "https://github.com/dxsixpc/utils",
     "branch": "master"
   },
   "license": "MIT",
+  "author": {
+    "name": "dxsix",
+    "email": "desixpc@gmail.com"
+  },
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -61,6 +66,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@commitlint/cz-commitlint": "^17.4.2",
+    "@dxsixpc/configs": "^0.1.0",
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
     "@umijs/lint": "^4.0.0",
@@ -83,8 +89,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "authors": [
-    "desixpc@gmail.com"
-  ]
+  }
 }
