--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "homepage": "https://dxsixpc.github.io/utils",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dxsixpc/utils",
-    "branch": "master"
+    "url": "https://github.com/dxsixpc/utils"
   },
   "license": "MIT",
   "author": {
@@ -61,19 +60,16 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.20.13",
-    "@dxsixpc/configs": "^0.1.5",
+    "@dxsixpc/configs": "^0.2.4",
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.191",
-    "@umijs/lint": "^4.0.49",
     "dumi": "^2.0.2",
     "father": "^4.1.0",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "stylelint": "^14.9.1"
+    "react-dom": "^18.0.0"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
