--- a/package.json
+++ b/package.json
@@ -56,8 +56,22 @@
     }
   },
   "dependencies": {
+    "@babel/core": ">=7.8.0 <8.0.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@typescript-eslint/parser": ">=5.0.0 <6.0.0",
     "axios": "^1.3.2",
-    "lodash": "^4.17.21"
+    "commitizen": "^4.0.3",
+    "eslint": ">=7.5.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0",
+    "inquirer": "^8.0.0",
+    "lodash": "^4.17.21",
+    "postcss": ">=8.4.6 <9.0.0",
+    "prettier": "^2.8.3",
+    "react-is": ">= 16.8.0",
+    "styled-components": ">= 2",
+    "stylelint": ">=14.4.0 <15.0.0",
+    "typescript": ">=4.7.0 <5.0.0",
+    "webpack": ">=5.20.0 <6.0.0"
   },
   "devDependencies": {
     "@dxsixpc/configs": "^0.2.8",
