--- a/package.json
+++ b/package.json
@@ -56,34 +56,31 @@
     }
   },
   "dependencies": {
-    "@babel/core": ">=7.8.0 <8.0.0",
-    "@babel/plugin-syntax-flow": "^7.14.5",
-    "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@typescript-eslint/parser": ">=5.0.0 <6.0.0",
     "axios": "^1.3.2",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@babel/core": ">=7.8.0 <8.0.0",
+    "@commitlint/cz-commitlint": "^17.4.2",
+    "@dxsixpc/configs": "^0.2.9",
+    "@types/lodash": "^4.14.191",
     "commitizen": "^4.0.3",
+    "dumi": "^2.1.7",
     "eslint": ">=7.5.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0",
+    "father": "^4.1.3",
+    "gh-pages": "^5.0.0",
+    "husky": "^8.0.3",
     "inquirer": "^8.0.0",
-    "lodash": "^4.17.21",
+    "lint-staged": "^13.1.0",
     "postcss": ">=8.4.6 <9.0.0",
     "prettier": "^2.8.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-is": ">= 16.8.0",
     "styled-components": ">= 2",
     "stylelint": ">=14.4.0 <15.0.0",
     "typescript": ">=4.7.0 <5.0.0",
     "webpack": ">=5.20.0 <6.0.0"
-  },
-  "devDependencies": {
-    "@dxsixpc/configs": "^0.2.8",
-    "@types/axios": "^0.14.0",
-    "@types/lodash": "^4.14.191",
-    "dumi": "^2.0.2",
-    "father": "^4.1.0",
-    "gh-pages": "^5.0.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
