--- a/package.json
+++ b/package.json
@@ -62,23 +62,23 @@
   "devDependencies": {
     "@babel/core": ">=7.8.0 <8.0.0",
     "@commitlint/cz-commitlint": "^17.4.2",
-    "@dxsixpc/configs": "^0.2.9",
+    "@dxsixpc/configs": "^0.3.0",
     "@types/lodash": "^4.14.191",
     "commitizen": "^4.0.3",
-    "dumi": "^2.1.7",
-    "eslint": ">=7.5.0 <8.0.0 || >=8.0.0-0 <8.0.0 || >=8.0.0 <9.0.0",
-    "father": "^4.1.3",
+    "dumi": "^2.1.9",
+    "eslint": "^8.34.0",
+    "father": "^4.1.4",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "inquirer": "^8.0.0",
-    "lint-staged": "^13.1.0",
+    "lint-staged": "^13.1.1",
     "postcss": ">=8.4.6 <9.0.0",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": ">= 16.8.0",
     "styled-components": ">= 2",
-    "stylelint": ">=14.4.0 <15.0.0",
+    "stylelint": "^15.1.0",
     "typescript": ">=4.7.0 <5.0.0",
     "webpack": ">=5.20.0 <6.0.0"
   },
