--- a/package.json
+++ b/package.json
@@ -56,29 +56,33 @@
     }
   },
   "dependencies": {
-    "axios": "^1.3.2",
+    "axios": "^1.3.3",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@babel/core": ">=7.8.0 <8.0.0",
-    "@commitlint/cz-commitlint": "^17.4.2",
-    "@dxsixpc/configs": "^0.3.0",
+    "@babel/core": "^7.21.0",
+    "@commitlint/cz-commitlint": "^17.4.4",
+    "@dxsixpc/configs": "^0.3.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@types/lodash": "^4.14.191",
+    "@types/react": "^18.0.28",
+    "antd": "^5.2.2",
     "commitizen": "^4.0.3",
-    "dumi": "^2.1.9",
+    "dumi": "^2.1.10",
     "eslint": "^8.34.0",
-    "father": "^4.1.4",
+    "father": "^4.1.5",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "inquirer": "^8.0.0",
-    "lint-staged": "^13.1.1",
+    "lint-staged": "^13.1.2",
     "postcss": ">=8.4.6 <9.0.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": ">= 16.8.0",
     "styled-components": ">= 2",
-    "stylelint": "^15.1.0",
+    "stylelint": "^15.2.0",
     "typescript": ">=4.7.0 <5.0.0",
     "webpack": ">=5.20.0 <6.0.0"
   },
