--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "extends": "@dxsixpc/configs/tsconfig",
   "compilerOptions": {
+    "jsxImportSource": "@emotion/react",
     "baseUrl": ".",
     "paths": {
-      "src/*": ["src/*"],
       "@@/*": [".dumi/tmp/*"],
       "@dxsixpc/utils": ["src"],
-      "@dxsixpc/utils/*": ["src/*", "*"]
+      "@dxsixpc/utils/*": ["src/*"]
     }
   },
-  "include": [".dumi/**/*", ".dumirc.ts", "src/**/*"]
+  "include": [".dumi/**/*", ".dumirc.ts", "src/**/*", "docs/**/*"]
 }
