--- a/package.json
+++ b/package.json
@@ -56,26 +56,26 @@
     }
   },
   "dependencies": {
-    "axios": "^1.3.3",
+    "axios": "^1.3.4",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@commitlint/cz-commitlint": "^17.4.4",
-    "@dxsixpc/configs": "^0.4.5",
+    "@dxsixpc/configs": "^0.4.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@types/lodash": "^4.14.191",
-    "@types/react": "^18.0.28",
     "antd": "^5.2.2",
     "commitizen": "^4.0.3",
-    "dumi": "^2.1.11",
+    "dumi": "^2.1.12",
     "eslint": "^8.34.0",
     "father": "^4.1.5",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "inquirer": "^8.0.0",
     "lint-staged": "^13.1.2",
+    "path": "^0.12.7",
     "postcss": ">=8.4.6 <9.0.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
