--- a/package.json
+++ b/package.json
@@ -60,13 +60,17 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@babel/core": "^7.21.0",
     "@commitlint/cz-commitlint": "^17.4.4",
     "@dxsixpc/configs": "^0.4.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@types/lodash": "^4.14.191",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "antd": "^5.2.2",
+    "clipboard": "^2.0.11",
     "commitizen": "^4.0.3",
     "dumi": "^2.1.12",
     "eslint": "^8.34.0",
