--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "extends": "@dxsixpc/configs/tsconfig",
   "compilerOptions": {
-    "jsxImportSource": "@emotion/react",
     "baseUrl": ".",
     "paths": {
+      "docs/*": ["docs/*"],
       "@@/*": [".dumi/tmp/*"],
       "@dxsixpc/utils": ["src"],
       "@dxsixpc/utils/*": ["src/*"]
-    }
+    },
+    "types": ["@emotion/react", "react"]
   },
   "include": [".dumi/**/*", ".dumirc.ts", "src/**/*", "docs/**/*"]
 }
