--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dxsixpc/utils",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "description": "工具库",
   "homepage": "https://dxsixpc.github.io/utils",
   "repository": {
@@ -56,6 +56,7 @@
     }
   },
   "dependencies": {
+    "@babel/runtime": "^7.21.0",
     "axios": "^1.3.4",
     "lodash": "^4.17.21"
   },
@@ -72,7 +73,7 @@
     "antd": "^5.2.2",
     "clipboard": "^2.0.11",
     "commitizen": "^4.0.3",
-    "dumi": "^2.1.12",
+    "dumi": "^2.1.13",
     "eslint": "^8.34.0",
     "father": "^4.1.5",
     "gh-pages": "^5.0.0",
