--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@dxsixpc/configs/tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
+    "outDir": "dist",
     "paths": {
       "docs/*": ["docs/*"],
       "@@/*": [".dumi/tmp/*"],
