--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dxsixpc/utils",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "工具库",
   "homepage": "https://dxsixpc.github.io/utils",
   "repository": "https://github.com/dxsixpc/utils",
@@ -32,23 +32,9 @@
     "test": "jest"
   },
   "lint-staged": {
-    "*.{md,json}": [
-      "prettier --write --no-error-on-unmatched-pattern"
-    ],
-    "*.{css,less}": [
-      "stylelint --fix",
-      "prettier --write"
-    ],
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
     "*.{ts,tsx}": [
       "eslint --fix",
       "prettier --parser=typescript --write"
-    ],
-    "*.test.ts": [
-      "jest"
     ]
   },
   "config": {
@@ -67,26 +53,27 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
     "@commitlint/cz-commitlint": "^17.4.4",
-    "@dxsixpc/configs": "^0.4.6",
+    "@dxsixpc/components": "^0.1.0",
+    "@dxsixpc/configs": "^0.4.17",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.14.1",
+    "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "antd": "^5.2.2",
-    "babel-jest": "^29.4.3",
+    "antd": "^5.3.0",
+    "babel-jest": "^29.5.0",
     "clipboard": "^2.0.11",
     "commitizen": "^4.0.3",
-    "dumi": "^2.1.13",
-    "eslint": "^8.34.0",
-    "father": "^4.1.5",
+    "dumi": "^2.1.15",
+    "eslint": "^8.35.0",
+    "father": "^4.1.6",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "inquirer": "^8.0.0",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.1.2",
     "path": "^0.12.7",
     "postcss": ">=8.4.6 <9.0.0",
@@ -94,11 +81,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": ">= 16.8.0",
-    "styled-components": ">= 2",
+    "styled-components": "^5.3.8",
     "stylelint": "^15.2.0",
     "ts-node": "^10.9.1",
     "typescript": ">=4.7.0 <5.0.0",
-    "webpack": ">=5.20.0 <6.0.0"
+    "webpack": "^5.76.0"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
