--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "@@/*": [".dumi/tmp/*"],
       "docs/": ["docs"],
       "docs/*": ["docs/*"],
+      "src": ["src"],
+      "src/*": ["src/*"],
       "@dxsixpc/utils": ["src"],
       "@dxsixpc/utils/*": ["src/*"]
     },
