--- a/package.json
+++ b/package.json
@@ -50,26 +50,26 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@babel/core": "^7.21.0",
+    "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
     "@commitlint/cz-commitlint": "^17.4.4",
-    "@dxsixpc/components": "0.2.1",
-    "@dxsixpc/configs": "^0.4.18",
+    "@dxsixpc/components": "0.2.4",
+    "@dxsixpc/configs": "^0.4.19",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.15.0",
+    "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "antd": "^5.3.0",
+    "antd": "^5.3.1",
     "babel-jest": "^29.5.0",
     "clipboard": "^2.0.11",
     "commitizen": "^4.0.3",
     "dumi": "^2.1.15",
     "eslint": "^8.36.0",
-    "father": "^4.1.6",
+    "father": "^4.1.7",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "inquirer": "^8.0.0",
@@ -82,11 +82,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": ">= 16.8.0",
-    "styled-components": "^5.3.8",
-    "stylelint": "^15.2.0",
+    "styled-components": "^5.3.9",
+    "stylelint": "^15.3.0",
     "ts-node": "^10.9.1",
-    "typescript": ">=4.7.0 <5.0.0",
-    "webpack": "^5.76.1"
+    "typescript": "^5.0.2",
+    "webpack": "^5.76.2"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
