📚docs: 调整文档结构

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,13 @@
     },
     "types": ["jest"]
   },
-  "include": [".dumi/**/*", ".dumirc.ts", "src/**/*", "docs/**/*", ".eslintrc.js", "jest.config.ts"]
+  "include": [
+    ".dumi/**/*",
+    ".dumirc.ts",
+    "src/**/*",
+    "docs/**/*",
+    ".eslintrc.js",
+    "jest.config.ts",
+    "babel.config.js"
+  ]
 }
