--- a/package.json
+++ b/package.json
@@ -55,38 +55,38 @@
     "@babel/preset-typescript": "^7.21.4",
     "@commitlint/cz-commitlint": "^17.5.0",
     "@dxsixpc/components": "0.2.6",
-    "@dxsixpc/configs": "^1.0.1",
+    "@dxsixpc/configs": "^1.0.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@types/jest": "^29.5.0",
-    "@types/lodash": "^4.14.192",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
-    "antd": "^5.4.0",
+    "antd": "^5.4.2",
     "babel-jest": "^29.5.0",
     "clipboard": "^2.0.11",
     "commitizen": "^4.0.3",
-    "dumi": "^2.1.19",
+    "dumi": "^2.1.21",
     "eslint": "^8.38.0",
     "father": "^4.1.8",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
-    "inquirer": "^8.0.0",
+    "inquirer": "8",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.1",
     "path": "^0.12.7",
-    "postcss": ">=8.4.6 <9.0.0",
+    "postcss": "^8.4.22",
     "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": ">= 16.8.0",
     "styled-components": "^5.3.9",
-    "stylelint": "^15.4.0",
+    "stylelint": "^15.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
-    "webpack": "^5.78.0"
+    "webpack": "^5.79.0"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
