--- a/package.json
+++ b/package.json
@@ -32,44 +32,43 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^5.1.4",
-    "@babel/core": "^7.22.8",
-    "@babel/preset-env": "^7.22.7",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "^7.22.6",
-    "@commitlint/cz-commitlint": "^17.5.0",
+    "@commitlint/cz-commitlint": "^17.6.7",
     "@dxsixpc/components": "0.2.6",
     "@dxsixpc/configs": "^1.2.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.1",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "antd": "^5.7.0",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.7",
+    "antd": "^5.7.3",
     "babel-jest": "^29.6.1",
     "clipboard": "^2.0.11",
     "commitizen": "^4.0.3",
     "dumi": "^2.2.1",
-    "eslint": "^8.44.0",
-    "father": "^4.2.3",
+    "eslint": "^8.45.0",
+    "father": "^4.3.0",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
-    "inquirer": "8",
+    "inquirer": "^8.2.5",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "lint-staged": "^13.2.3",
     "path": "^0.12.7",
-    "postcss": "^8.4.25",
+    "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": ">= 16.8.0",
-    "styled-components": "^6.0.3",
+    "styled-components": "^6.0.5",
     "stylelint": "^14.16.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
-    "webpack": "^5.88.1"
+    "webpack": "^5.88.2"
   },
   "publishConfig": {
     "access": "public"
