✨feat: 补充文档，新增部分函数，完善jest测试

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prepare": "husky install && dumi setup",
     "prepublishOnly": "pnpm run test && pnpm run build",
     "start": "pnpm run dev",
-    "test": "jest"
+    "test": "jest --coverage -o",
+    "test:all": "jest --coverage"
   },
   "devDependencies": {
     "@ant-design/icons": "^5.2.6",
