--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@dxsixpc/utils",
-  "version": "3.0.0",
+  "name": "@zpcscc/utils",
+  "version": "4.0.0",
   "description": "工具函数库",
-  "homepage": "https://dxsixpc.github.io/utils",
-  "repository": "https://github.com/dxsixpc/utils",
+  "homepage": "https://zpcscc.github.io/utils",
+  "repository": "https://github.com/zpcscc/utils",
   "license": "MIT",
   "author": {
-    "name": "dxsix",
+    "name": "zpcscc",
     "email": "dxsixpc@gmail.com"
   },
   "module": "dist/index.js",
@@ -32,46 +32,45 @@
     "test:all": "jest --coverage"
   },
   "devDependencies": {
-    "@ant-design/icons": "^5.2.6",
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-typescript": "^7.23.2",
-    "@babel/runtime": "^7.23.2",
-    "@commitlint/cz-commitlint": "^18.2.0",
-    "@dxsixpc/components": "0.2.6",
-    "@dxsixpc/configs": "^1.2.7",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@types/jest": "^29.5.6",
-    "@types/node": "^20.8.9",
-    "@types/react": "^18.2.33",
-    "@types/react-dom": "^18.2.14",
-    "@typescript-eslint/parser": "^6.9.0",
-    "antd": "^5.10.2",
-    "babel-jest": "^29.7.0",
-    "clipboard": "^2.0.11",
-    "commitizen": "^4.0.3",
-    "cosmiconfig": "^8.3.6",
-    "dumi": "^2.2.14",
-    "eslint": "^8.52.0",
-    "father": "^4.3.6",
-    "gh-pages": "^6.0.0",
-    "husky": "^8.0.3",
-    "inquirer": "^8.2.5",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.0.2",
-    "path": "^0.12.7",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": ">= 16.8.0",
-    "styled-components": "^6.1.0",
-    "stylelint": "^14.16.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "webpack": "^5.89.0"
+    "@ant-design/icons": "5.2.6",
+    "@babel/core": "7.23.3",
+    "@babel/preset-env": "7.23.3",
+    "@babel/preset-typescript": "7.23.3",
+    "@babel/runtime": "7.23.2",
+    "@commitlint/cz-commitlint": "18.4.1",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@types/jest": "29.5.8",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@typescript-eslint/parser": "6.10.0",
+    "@zpcscc/configs": "2.0.1",
+    "antd": "5.11.1",
+    "babel-jest": "29.7.0",
+    "clipboard": "2.0.11",
+    "commitizen": "4.3.0",
+    "cosmiconfig": "8.3.6",
+    "dumi": "2.2.14",
+    "eslint": "8.53.0",
+    "father": "4.3.7",
+    "gh-pages": "6.0.0",
+    "husky": "8.0.3",
+    "inquirer": "8.2.5",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "lint-staged": "15.1.0",
+    "path": "0.12.7",
+    "postcss": "8.4.31",
+    "prettier": "3.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "16.8.0",
+    "styled-components": "6.1.1",
+    "stylelint": "14.16.1",
+    "ts-node": "10.9.1",
+    "typescript": "5.2.2",
+    "webpack": "5.89.0"
   },
   "publishConfig": {
     "access": "public"
