--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dev": "dumi dev",
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d docs-dist",
+    "knip": "knip",
     "lint": "pnpm run lint:es && pnpm run lint:css",
     "lint:css": "stylelint \"{src,test}/**/*.{css,less}\"",
     "lint:es": "eslint \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
@@ -33,43 +34,42 @@
   },
   "devDependencies": {
     "@ant-design/icons": "5.2.6",
-    "@babel/core": "7.23.3",
-    "@babel/preset-env": "7.23.3",
+    "@babel/core": "7.23.5",
+    "@babel/preset-env": "7.23.5",
     "@babel/preset-typescript": "7.23.3",
-    "@babel/runtime": "7.23.2",
-    "@commitlint/cz-commitlint": "18.4.1",
-    "@emotion/react": "11.11.1",
+    "@babel/runtime": "7.23.5",
+    "@commitlint/cz-commitlint": "18.4.3",
     "@emotion/styled": "11.11.0",
-    "@types/jest": "29.5.8",
-    "@types/node": "20.9.0",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
-    "@typescript-eslint/parser": "6.10.0",
+    "@types/jest": "29.5.10",
+    "@types/node": "20.10.1",
+    "@types/react": "18.2.39",
+    "@types/react-dom": "18.2.17",
+    "@typescript-eslint/parser": "6.13.1",
     "@zpcscc/configs": "2.0.1",
-    "antd": "5.11.1",
+    "antd": "5.11.5",
     "babel-jest": "29.7.0",
     "clipboard": "2.0.11",
     "commitizen": "4.3.0",
-    "cosmiconfig": "8.3.6",
     "dumi": "2.2.14",
-    "eslint": "8.53.0",
+    "eslint": "8.54.0",
     "father": "4.3.7",
-    "gh-pages": "6.0.0",
+    "gh-pages": "6.1.0",
     "husky": "8.0.3",
     "inquirer": "8.2.5",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "knip": "3.3.4",
     "lint-staged": "15.1.0",
     "path": "0.12.7",
     "postcss": "8.4.31",
-    "prettier": "3.0.3",
+    "prettier": "3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-is": "16.8.0",
+    "react-is": "18.2.0",
     "styled-components": "6.1.1",
     "stylelint": "14.16.1",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2",
+    "typescript": "5.3.2",
     "webpack": "5.89.0"
   },
   "publishConfig": {
