--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-typescript": "7.23.3",
     "@babel/runtime": "7.23.5",
     "@commitlint/cz-commitlint": "18.4.3",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "11.11.0",
     "@types/jest": "29.5.10",
     "@types/node": "20.10.1",
@@ -46,6 +47,7 @@
     "@types/react-dom": "18.2.17",
     "@typescript-eslint/parser": "6.13.1",
     "@zpcscc/configs": "2.0.2",
+    "add": "^2.0.6",
     "antd": "5.11.5",
     "babel-jest": "29.7.0",
     "clipboard": "2.0.11",
@@ -68,7 +70,7 @@
     "styled-components": "6.1.1",
     "stylelint": "14.16.1",
     "ts-node": "10.9.1",
-    "typescript": "5.3.2",
+    "typescript": "5.2.2",
     "webpack": "5.89.0"
   },
   "publishConfig": {
