✨feat: 初步实现自动化生成文档

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
     "docs/**/*",
     ".eslintrc.js",
     "jest.config.ts",
-    "babel.config.js"
-  ]
+    "babel.config.js",
+    "scripts/**/*"
+  ],
+  "exclude": ["node_modules"]
 }
