--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "commit": "git add . && git-cz",
     "deploy": "pnpm run docs:build && pnpm run docs:deploy",
     "dev": "dumi dev",
-    "docs:build": "dumi build",
+    "docs:build": "pnpm run jsdoc2md && dumi build",
     "docs:deploy": "gh-pages -d docs-dist",
+    "jsdoc2md": "node scripts/jsdoc2md/index.mjs",
     "knip": "knip",
     "lint": "pnpm run lint:es && pnpm run lint:css",
     "lint:css": "stylelint \"{src,test}/**/*.{css,less}\"",
@@ -39,7 +40,7 @@
     "@babel/preset-typescript": "7.23.3",
     "@babel/runtime": "7.23.5",
     "@commitlint/cz-commitlint": "18.4.3",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@types/jest": "29.5.10",
     "@types/node": "20.10.1",
@@ -47,7 +48,6 @@
     "@types/react-dom": "18.2.17",
     "@typescript-eslint/parser": "6.13.1",
     "@zpcscc/configs": "2.0.2",
-    "add": "^2.0.6",
     "antd": "5.11.5",
     "babel-jest": "29.7.0",
     "clipboard": "2.0.11",
@@ -55,12 +55,16 @@
     "dumi": "2.2.14",
     "eslint": "8.54.0",
     "father": "4.3.7",
+    "fs-extra": "11.2.0",
     "gh-pages": "6.1.0",
     "husky": "8.0.3",
     "inquirer": "8.2.5",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "jsdoc-babel": "0.5.0",
+    "jsdoc-to-markdown": "8.0.0",
     "lint-staged": "15.1.0",
+    "ora": "7.0.1",
     "path": "0.12.7",
     "postcss": "8.4.31",
     "prettier": "3.1.0",
