--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zpcscc/utils",
-  "version": "6.0.0",
+  "version": "6.1.0",
   "description": "工具函数库",
   "homepage": "https://zpcscc.github.io/utils",
   "repository": "https://github.com/zpcscc/utils",
@@ -31,28 +31,28 @@
     "prepublishOnly": "pnpm run test:all && pnpm run build",
     "start": "pnpm run dev & node scripts/jsdoc2md/watch.mjs",
     "test": "jest --coverage -o",
-    "test:all": "jest --coverage"
+    "test:all": "jest --coverage --no-cache"
   },
   "devDependencies": {
     "@ant-design/icons": "5.2.6",
-    "@babel/core": "7.23.5",
-    "@babel/preset-env": "7.23.5",
+    "@babel/core": "7.23.6",
+    "@babel/preset-env": "7.23.6",
     "@babel/preset-typescript": "7.23.3",
-    "@babel/runtime": "7.23.5",
+    "@babel/runtime": "7.23.6",
     "@commitlint/cz-commitlint": "18.4.3",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@types/jest": "29.5.10",
-    "@types/node": "20.10.3",
-    "@types/react": "18.2.41",
+    "@types/jest": "29.5.11",
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.45",
     "@types/react-dom": "18.2.17",
-    "@typescript-eslint/parser": "6.13.1",
+    "@typescript-eslint/parser": "6.14.0",
     "@zpcscc/configs": "2.0.2",
-    "antd": "5.12.1",
+    "antd": "5.12.2",
     "babel-jest": "29.7.0",
     "clipboard": "2.0.11",
     "commitizen": "4.3.0",
-    "dumi": "2.2.14",
+    "dumi": "2.2.16",
     "eslint": "8.55.0",
     "father": "4.3.7",
     "fs-extra": "11.2.0",
@@ -67,14 +67,14 @@
     "ora": "7.0.1",
     "path": "0.12.7",
     "postcss": "8.4.32",
-    "prettier": "3.1.0",
+    "prettier": "3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "styled-components": "6.1.1",
     "stylelint": "14.16.1",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3",
     "webpack": "5.89.0"
   },
   "publishConfig": {
