--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zpcscc/utils",
-  "version": "6.1.0",
+  "version": "7.0.0",
   "description": "工具函数库",
   "homepage": "https://zpcscc.github.io/utils",
   "repository": "https://github.com/zpcscc/utils",
@@ -34,48 +34,39 @@
     "test:all": "jest --coverage --no-cache"
   },
   "devDependencies": {
-    "@ant-design/icons": "5.2.6",
-    "@babel/core": "7.23.6",
-    "@babel/preset-env": "7.23.6",
-    "@babel/preset-typescript": "7.23.3",
-    "@babel/runtime": "7.23.6",
-    "@commitlint/cz-commitlint": "18.4.3",
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
-    "@types/jest": "29.5.11",
-    "@types/node": "20.10.4",
-    "@types/react": "18.2.45",
-    "@types/react-dom": "18.2.17",
-    "@typescript-eslint/parser": "6.14.0",
-    "@zpcscc/configs": "2.0.2",
-    "antd": "5.12.2",
+    "@ant-design/icons": "5.3.7",
+    "@babel/preset-env": "7.24.5",
+    "@babel/preset-typescript": "7.24.1",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@types/jest": "29.5.12",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@zpcscc/configs": "2.0.5",
+    "antd": "5.17.2",
     "babel-jest": "29.7.0",
     "clipboard": "2.0.11",
-    "commitizen": "4.3.0",
-    "dumi": "2.2.16",
-    "eslint": "8.55.0",
-    "father": "4.3.7",
+    "dumi": "2.3.4",
+    "father": "4.4.1",
     "fs-extra": "11.2.0",
-    "gh-pages": "6.1.0",
-    "husky": "8.0.3",
-    "inquirer": "8.2.5",
+    "gh-pages": "6.1.1",
+    "husky": "9.0.11",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jsdoc-babel": "0.5.0",
-    "jsdoc-to-markdown": "8.0.0",
-    "lint-staged": "15.2.0",
-    "ora": "7.0.1",
+    "jsdoc-to-markdown": "8.0.1",
+    "lint-staged": "15.2.2",
+    "ora": "8.0.1",
     "path": "0.12.7",
-    "postcss": "8.4.32",
-    "prettier": "3.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-is": "18.2.0",
-    "styled-components": "6.1.1",
-    "stylelint": "14.16.1",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-is": "18.3.1",
+    "styled-components": "6.1.11",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3",
-    "webpack": "5.89.0"
+    "typescript": "5.4.5",
+    "webpack": "5.91.0"
   },
   "publishConfig": {
     "access": "public"
