📚docs: 隐藏滚动条

--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "docs:build": "pnpm run jsdoc2md && dumi build",
     "docs:deploy": "gh-pages -d docs-dist",
     "jsdoc2md": "node scripts/jsdoc2md/index.mjs",
-    "lint": "pnpm run lint:es && pnpm run lint:css",
-    "lint:css": "stylelint \"{src,test}/**/*.{css,less}\"",
+    "lint": "pnpm run lint:es",
     "lint:es": "eslint \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
     "prepare": "husky install && dumi setup",
     "prepublishOnly": "pnpm run test:all && pnpm run build",
